# timecard

./: GEMINI.md  README.md
.kiro/specs/timecard-service/: design.md  requirements.md  tasks.md
timecard-api/: .env.example  Cargo.toml  Dockerfile  compose.yml
timecard-api/src/: main.rs
